[package]
name = "smol-tokio"
version = "0.1.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-smol"
path = "src/hello-smol.rs"

[[bin]]
name = "hello-tokio"
path = "src/hello-tokio.rs"

[dependencies]
anyhow = "1.0.28"
tokio = { version = "0.2.20", features = ["fs", "macros", "io-std", "rt-util", "rt-threaded", "sync", "time", "test-util"] }
smol = "0.1.4"
hyper = "0.13.5"
futures = "0.3.4"
num_cpus = "1.13.0"
