[package]
name = "smol-tokio"
version = "0.1.0"
authors = ["Fangdun Cai <cfddream@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hello-smol-single"
path = "src/hello-smol-single.rs"

[[bin]]
name = "hello-smol-multi"
path = "src/hello-smol-multi.rs"

[[bin]]
name = "hello-tokio-single"
path = "src/hello-tokio-single.rs"

[[bin]]
name = "hello-tokio-multi"
path = "src/hello-tokio-multi.rs"

[dependencies]
anyhow = "1.0.28"
tokio = { version = "0.2.20", features = ["full"] }
smol = "0.1.4"
hyper = "0.13.5"
futures = "0.3.4"
num_cpus = "1.13.0"
